--- a/cordova/plugin.xml
+++ b/cordova/plugin.xml
@@ -27,4 +27,42 @@
         </pods-config>
         <pod name="JumioMobileSDK-FAT" version="2.5.0" configurations="release,debug" />
     </platform>
+    
+    <platform name="android">
+        <config-file target="AndroidManifest.xml" parent="/*">
+            <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+            <uses-permission android:name="android.permission.INTERNET"/>
+            <uses-permission android:name="android.permission.CAMERA"/>
+            <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
+        </config-file>
+        <config-file target="AndroidManifest.xml" parent="/manifest/application">
+            <activity
+                android:name="com.jumio.bam.BamActivity"
+                android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
+                android:hardwareAccelerated="true"
+                android:theme="@style/Theme.Bam" />
+            <activity
+                android:name="com.jumio.nv.NetverifyActivity"
+                android:windowSoftInputMode="adjustResize"
+                android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
+                android:hardwareAccelerated="true"
+                android:theme="@style/Theme.Netverify"/>
+            <activity
+                android:name="com.jumio.md.MultiDocumentActivity"
+                android:windowSoftInputMode="adjustResize"
+                android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
+                android:hardwareAccelerated="true"
+                android:theme="@style/Theme.MultiDocument"/>
+        </config-file>
+        <config-file target="config.xml" parent="/*">
+            <feature name="JumioMobileSDK">
+                <param name="android-package"
+                value="com.jumio.mobilesdk.JumioMobileSDK"/>
+            </feature>
+        </config-file>
+        <proguard-config>
+            -keep class com.jumio.** { *; }
+        </proguard-config>
+        <source-file src="src/android/JumioMobileSDK.java" target-dir="src/com/jumio/mobilesdk" />
+    </platform>
 </plugin>
