--- a/cordova/plugin.xml
+++ b/cordova/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-jumio-mobilesdk" version="1.5.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="cordova-plugin-jumio-mobilesdk" version="1.6.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>JumioMobileSDK</name>
     <js-module name="JumioMobileSDK" src="www/JumioMobileSDK.js">
         <clobbers target="Jumio" />
@@ -25,8 +25,7 @@
             <source url="https://github.com/CocoaPods/Specs.git" />
             <source url="http://mobile-sdk.jumio.com/distribution.git" />
         </pods-config>
-        <pod name="JumioMobileSDK" version="2.5.0" configuration="release" />
-        <pod name="JumioMobileSDK-FAT" version="2.5.0" configuration="debug" />
+        <pod name="JumioMobileSDK-FAT" version="2.5.0" configurations="release,debug" />
     </platform>
     
     <platform name="android">
